# homelab

./: Makefile  README.md  ansible.cfg  homelab.yml  inventory  pyproject.toml  requirements.txt
roles/common/tasks/: main.yml
roles/common/vars/: main.yml
roles/containers/files/: containers.conf  emby.container  media.pod  registries.conf  sabnzbd.container  sonarr.container  storage.conf
roles/containers/tasks/: main.yml
roles/containers/vars/: main.yml
roles/filesystem/handlers/: main.yml
roles/filesystem/tasks/: main.yml
roles/filesystem/vars/: main.yml
roles/networking/files/: media.xml
roles/networking/tasks/: main.yml
