[project]
name = "homelab-ansible"
version = "0.1.0"
description = "Ansible automation for my homelab"
requires-python = ">=3.10"
dependencies = [
    "ansible>=10.0.0",
    "ansible-lint>=24.0.0",
    "yamllint>=1.35.0",
    "black>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "isort>=5.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "isort>=5.12.0",
]
