[project]
name = "homelab-ansible"
version = "0.1.0"
description = "Ansible automation for my homelab"
requires-python = ">=3.10"
dependencies = [
    "ansible>=10.0.0",
    "ansible-lint>=24.0.0",
    "yamllint>=1.35.0",
    "ruff>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "isort>=5.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "isort>=5.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
