[project]
name = "homelab-ansible"
version = "0.1.0"
description = "Ansible automation for my homelab"
requires-python = ">=3.12"
dependencies = [
    "ansible>=10.0.0",
    "ansible-lint>=24.0.0",
    "yamllint>=1.35.0",
    "ruff>=0.12.0",
    "jmespath>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "isort>=5.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "isort>=5.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "RUF",  # Ruff-specific rules
    "PTH",  # flake8-use-pathlib
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate (commented code)
    "PL",   # pylint
    "PERF", # perflint
]
ignore = [
    "S101",    # Use of assert (common in tests)
    "S603",    # subprocess without shell=True check
    "S607",    # Starting a process with a partial executable path
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "RET504",  # Unnecessary variable assignment before return
    "SIM108",  # Use ternary operator instead of if-else
]

# extra configuration for tests
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG001",  # Allow unused function arguments in tests
    "PLR2004", # Allow magic values in tests
]

[tool.ruff.lint.isort]
known-first-party = ["homelab"]
force-sort-within-sections = true

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
